myapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      imagePullSecrets:
        - name: my-ecr-secret
      containers:
        - name: myapp
          image: 211125762589.dkr.ecr.us-west-2.amazonaws.com/repo:counter_web
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
            - containerPort: 4369  # EPMD
            - containerPort: 9100
            - containerPort: 9101
            - containerPort: 9102
            - containerPort: 9103
            - containerPort: 9104
            - containerPort: 9105
          command: ["iex"]
          args: ["--name", "$(MYAPP_NODE_ADDRESS)", "--cookie", "$(MY_COOKIE)", "-S", "mix", "phx.server"]
